fix advance related fields in shift summary

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,16 +1,51 @@
 .header {
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: flex-start;
     padding: 10px 10px;
     background-color: #34495e;
+    height: 150px;
 }
 
 .header-image {
-    width: 100px;
-    height: 150px;
+    width: fit-content;
+    height: fit-content;
+    max-height: 160px;
+    object-fit: contain;
+}
+
+h1 {
+    color: white;
+    margin-left: 20px;
+}
+
+.main-nav {
+    background-color: #2c3e50;
+    padding: 10px 0;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-links li {
+    margin: 0 15px;
+}
+
+.nav-links a {
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
     padding: 10px;
-    object-fit: cover;
-    position: absolute;
-    margin-right: 15px;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+.nav-links a:hover {
+    background-color: #3498db;
 }
